# internal/core/entity/user.go
@@ -4,8 +4,8 @@ import "go-rest-api/ent"
 
 type User struct {
 	Model
-	Email    string `json:"email" validate:"required,email"`
-	Password string `json:"password,omitempty" validate:"required"`
+	Email    string `json:"email"`
+	Password string `json:"-"`
 	Posts    []Post `json:"posts,omitempty"`
 }
 
